logs/dag_id=iis_etl/run_id=manual__2025-04-04T21:00:42.818631+00:00/task_id=processing.load_dimensions/attempt=1.log
2025-04-04T21:00:51.706+0000 [INFO] Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: iis_etl.processing.load_dimensions manual__2025-04-04T21:00:42.818631+00:00 [queued]>
2025-04-04T21:00:51.712+0000 [INFO] Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: iis_etl.processing.load_dimensions manual__2025-04-04T21:00:42.818631+00:00 [queued]>
2025-04-04T21:00:51.712+0000 [INFO] Starting attempt 1 of 4
2025-04-04T21:00:51.719+0000 [INFO] Executing <Task(PythonOperator): processing.load_dimensions> on 2025-04-04 21:00:42.818631+00:00
2025-04-04T21:00:51.722+0000 [INFO] Started process 288 to run task
2025-04-04T21:00:51.724+0000 [INFO] Running: ['airflow', 'tasks', 'run', 'iis_etl', 'processing.load_dimensions', 'manual__2025-04-04T21:00:42.818631+00:00', '--job-id', '83', '--raw', '--subdir', 'DAGS_FOLDER/iis_etl.py', '--cfg-path', '/tmp/tmps12_hrsy']
2025-04-04T21:00:51.725+0000 [INFO] Job 83: Subtask processing.load_dimensions
2025-04-04T21:00:51.857+0000 [INFO] Running <TaskInstance: iis_etl.processing.load_dimensions manual__2025-04-04T21:00:42.818631+00:00 [running]> on host b8e5693c89ab
2025-04-04T21:00:51.909+0000 [INFO] Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='iis_etl' AIRFLOW_CTX_TASK_ID='processing.load_dimensions' AIRFLOW_CTX_EXECUTION_DATE='2025-04-04T21:00:42.818631+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-04-04T21:00:42.818631+00:00'
2025-04-04T21:00:51.966+0000 [INFO] Using connection ID 'postgres_iis' for task execution.
2025-04-04T21:00:52.183+0000 [ERROR] Dimension loading failed: (psycopg2.errors.SyntaxError) syntax error at end of input
LINE 7:             
                    ^

[SQL: 
                INSERT INTO dim_responses 
                (status_code, substatus, win32_status)
                SELECT status_code, substatus, win32_status
                FROM temp_responses
                ON CONFLICT (status_code, substatus, win32_status)
            ]
(Background on this error at: https://sqlalche.me/e/14/f405)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1901, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 7:             
                    ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/opt/airflow/dags/iis_etl.py", line 546, in load_dimensions
    """)
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1370, in execute
    future=False,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1676, in _exec_driver_sql
    distilled_parameters,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1944, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 2125, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1901, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at end of input
LINE 7:             
                    ^

[SQL: 
                INSERT INTO dim_responses 
                (status_code, substatus, win32_status)
                SELECT status_code, substatus, win32_status
                FROM temp_responses
                ON CONFLICT (status_code, substatus, win32_status)
            ]
(Background on this error at: https://sqlalche.me/e/14/f405)
2025-04-04T21:00:52.185+0000 [ERROR] Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1901, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 7:             
                    ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/iis_etl.py", line 546, in load_dimensions
    """)
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1370, in execute
    future=False,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1676, in _exec_driver_sql
    distilled_parameters,
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1944, in _execute_context
    e, statement, parameters, cursor, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 2125, in _handle_dbapi_exception
    sqlalchemy_exception, with_traceback=exc_info[2], from_=e
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/base.py", line 1901, in _execute_context
    cursor, statement, parameters, context
  File "/home/airflow/.local/lib/python3.7/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at end of input
LINE 7:             
                    ^

[SQL: 
                INSERT INTO dim_responses 
                (status_code, substatus, win32_status)
                SELECT status_code, substatus, win32_status
                FROM temp_responses
                ON CONFLICT (status_code, substatus, win32_status)
            ]
(Background on this error at: https://sqlalche.me/e/14/f405)
2025-04-04T21:00:52.189+0000 [INFO] Marking task as UP_FOR_RETRY. dag_id=iis_etl, task_id=processing.load_dimensions, execution_date=20250404T210042, start_date=20250404T210051, end_date=20250404T210052
2025-04-04T21:00:52.194+0000 [ERROR] Failed to execute job 83 for task processing.load_dimensions ((psycopg2.errors.SyntaxError) syntax error at end of input
LINE 7:             
                    ^

[SQL: 
                INSERT INTO dim_responses 
                (status_code, substatus, win32_status)
                SELECT status_code, substatus, win32_status
                FROM temp_responses
                ON CONFLICT (status_code, substatus, win32_status)
            ]
(Background on this error at: https://sqlalche.me/e/14/f405); 288)
2025-04-04T21:00:52.236+0000 [INFO] Task exited with return code 1
2025-04-04T21:00:52.462+0000 [INFO] 0 downstream tasks scheduled from follow-on schedule check
